# Image-Classification

./: .gitignore  cnn.ipynb  feedforward-nn.ipynb  gan.ipynb  linear-regression.ipynb  logistic-regression.ipynb  pyproject.toml  resnet.ipynb  transfer-learning.ipynb
.github/workflows/: ci.yml
